# video-tldr

./: LICENSE  README.md  pyproject.toml
src/video_tldr/: ollama.py  summarize.py  translate.py  util.py  whisper_wrapper.py
src/video_tldr/_internal/: log.py
