[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = 'video_tldr'
authors = [
    { name = "YWC Tech" }
]
version = '0.0.1'
description = 'Summarize video using STT + LLM w/ Ollama'
readme = 'README.md'
requires-python = '>= 3.8'
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["video"]
dependencies = [
    'transformers>=4.0.0,<5.0.0',
    'torch>=2.0.0,<3.0.0',
    'requests',
]

[tool.setuptools]
package-dir = {'' = 'src'}
